syntax = "proto3";

package scheduling;

service SchedulingService {
    // Simple
    rpc ScheduleInterview (InterviewRequest) returns (InterviewResponse);
}

message InterviewRequest {
    int32 candidate_id = 1;
    string date = 2;
    string time = 3;
}

message InterviewResponse {
    string status = 1;
    string date = 2;
    string time = 3;
}

